Fixed unwanted horizontal scroll at event listing

--- a/src/assets/scss/views/home/_selector.scss
+++ b/src/assets/scss/views/home/_selector.scss
@@ -53,6 +53,7 @@
 			display: flex;
 			flex-direction: column;
 			align-items: center;
+			overflow-x: hidden;
 			gap: 2vh 0;
 			width: 90%;
 			margin: 0 auto;
